scrollbar bugfix

--- a/index_files/style.css
+++ b/index_files/style.css
@@ -105,6 +105,20 @@ a {
     text-rendering: optimizeLegibility
 }
 
+body ::-webkit-scrollbar {
+    width: 3px;
+    height: 3px
+}
+
+body ::-webkit-scrollbar-track-piece {
+    background-color: #f1f1f1
+}
+
+body ::-webkit-scrollbar-thumb:vertical {
+    height: 30px;
+    background-color: #333
+}
+
 ::-moz-selection {
     background: #fafafa;
     color: #363636
@@ -280,7 +294,7 @@ a:link {
 .sd--works {
     width: 100%;
     border-top: 2px solid #000;
-    margin: 35px 0 0
+    margin: 5px 0 0
 }
 
 .sd--works.is-v .a--op {
